tests/core/ill-typed/unexpected-type-for-expression/bad-succ-3.stella
language core;

fn main(x : Nat) -> Nat {
    return succ(false);
}